Bug 384323 - switching to payee view by context menu from ledger fails if payee view previously filtered to unused
Summary: switching to payee view by context menu from ledger fails if payee view previ...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-03 20:28 UTC by Jack
Modified: 2022-11-12 14:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: master
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack 2017-09-03 20:28:20 UTC
In Payee View, select "unused" as the filter, then go to the ledger for some account.  Select a transaction with a payee, right click on the transaction and select "Go to Payee."  KMM displays the Payee View, but with "unused" still selected, and either no payee selected or the one which was previously selected.

While I would normally say KMM should not silently change a filter/dropdown, in this case, without doing that, the user is left wondering why he can't view that payee.  I think KMM should either switch to "All" or at least pop up a warning that the selected payee can't be viewed with the filter "Unused".
Comment 1 Justin Zobel 2022-11-08 06:49:57 UTC
Thank you for reporting this issue in KDE software. As it has been a while since this issue was reported, can we please ask you to see if you can reproduce the issue with a recent software version?

If you can reproduce the issue, please change the status to "REPORTED" when replying. Thank you!
Comment 2 Jack 2022-11-11 23:19:33 UTC
Confirmed still behaves this way in KMyMoney Version 5.1.80-5525e5577 (current git master appimage).  I also note that if you switch the filter back to "All" no Payee is selected, so KMM has even forgotten about the Payee you wanted to view.
Comment 3 Thomas Baumgart 2022-11-12 14:29:32 UTC
Git commit dc9a110960509e2b47c3b2c23f0f131dcde6ad0c by Thomas Baumgart.
Committed on 12/11/2022 at 06:33.
Pushed by tbaumgart into branch 'master'.

Remove filter if target payee is not visible

When a payee is not visible because of the filter settings in the payees
view but the target of a 'Goto payee' operation, the filter is cleared.
First the text filter and then the type filter.
FIXED-IN: master

M  +20   -4    kmymoney/views/kpayeesview_p.h

https://invent.kde.org/office/kmymoney/commit/dc9a110960509e2b47c3b2c23f0f131dcde6ad0c