Remove filter if target payee is not visible

When a payee is not visible because of the filter settings in the payees
view but the target of a 'Goto payee' operation, the filter is cleared.
First the text filter and then the type filter.

BUG: 384323
FIXED-IN: master